---
title: Policy Lifecycle State Machine
config:
  theme: neutral
  look: classic
---
stateDiagram-v2
    direction LR

    %% Define States with consistent formatting
    state "CREATED" as Created
    state "ACTIVE - Reasoning" as Active
    state "VALIDATING - DIM" as Validating
    state "ESCALATED - HITL" as Escalated
    state "ACCEPTED" as Accepted
    state "EXECUTING" as Executing
    state "CLOSED" as Closed
    state "ABORTED" as Aborted

    %% Initial Transition
    [*] --> Created
    Created --> Active : Context Compilation

    %% Reasoning to Validation
    Active --> Validating : Policy Proposal Emitted

    %% Validation Logic (DIM)
    Validating --> Accepted : Validation PASSED
    Validating --> Aborted : Validation FAILED
    Validating --> Escalated : Threshold Reached

    %% Escalation Logic (Human-in-the-Loop)
    Escalated --> Accepted : Human Override
    Escalated --> Aborted : Human Reject

    %% Execution Logic
    Accepted --> Executing : Create Execution Intent
    Executing --> Closed : Success
    Executing --> Aborted : Runtime Error

    %% Terminal States
    Closed --> [*]
    Aborted --> [*]

    %% Notes for context
    note right of Validating
        Decision Integrity Module
        Enforces Logic & Safety
    end note
    
    note right of Escalated
        Governance by Exception
        Awaiting Human Input
    end note
